namespace ExpenseTrackerGrupo4.src.Aplication.Services;

public class AuthenticationService
{

}
